added npm start cmd

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tactico",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "npm i"
   },
   "author": "shun Ishizeki, Shun Ogasawara, Siqi Zhang",
